# sony-agentic-ai-demos

practices/: requirements.txt
practices/advanced-rag-techniques/: 2-query-transformations.ipynb  3-routing-datasources.ipynb  4-indexing-techniques.ipynb  5-raptor.ipynb  6-colbert.ipynb  7-retrieval.ipynb
practices/agentic-ai/: 0-learning-lg-agents.ipynb  1-product-agent.ipynb  2-order-agent.ipynb  3-multi-agent-cs-support.ipynb  requirements.txt
practices/end2end/: Dockerfile  README.md  pyproject.toml
practices/end2end/app/: server.py
practices/end2end/experiments/: rag-fusion.ipynb
practices/experiments/: tool-calling-agent-2.ipynb  tool-calling-agent.ipynb
practices/mlops/: 01-langchain-sql-evaluations.ipynb  02-langgraph.ipynb  03.00-vanilla-ragas.ipynb  03.01-opik-ragas.ipynb  03.02-rag-ragas.ipynb  4-hallucinations-check.ipynb  5-moderation-check.ipynb  6-pydantic-output-parser.ipynb  requirements.txt
practices/notebooks/: 0-hello.ipynb  00-hello.ipynb  1-lc-basics.ipynb  2-lc-basics.ipynb  3-lc-custom-chains.ipynb  4-lc-router-chain.ipynb  5-lc-summarize-prompt.ipynb  6-lc-summarize-chain.ipynb  7-lc-restapis-chain.ipynb
practices/notebooks/agents/: 1-csv-agents.py  2-sql-agents.ipynb  3-custom-agents.ipynb  requirements.txt
practices/ollama/: Ollama_CaseStudy.ipynb  basic-chain.ipynb
practices/rag/: 2-agentic-rag.ipynb  3-hybrid-rag.ipynb  4-langgraph-hello.ipynb  5-self-rag.ipynb  6-corrective-rag.ipynb  7-adaptive-rag.ipynb  8-agentic-rag-advanced.ipynb
practices/rag/1-use-case/: 1-pre-processing.py  2-test-similarity-search.py  (+1 more)
