[tool.poetry]
name = "end2end"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10.5"
uvicorn = "^0.23.2"
langserve = {extras = ["all"], version = "^0.3.1"}
pydantic = "*"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
langchain-openai = "^0.3.9"
python-decouple = "^3.8"
beautifulsoup4 = "^4.13.3"
langchain-chroma = "^0.2.2"
chromadb = "^0.6.3"
bs4 = "^0.0.2"
httpx = "*"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
